# Miss-Vodka-Telegram-Bot

./: Cargo.toml  Procfile  README.md
src/: main.rs  webhook.rs
src/commands/: common.rs  gif.rs  lyrics.rs  mod.rs  photo.rs  quote.rs  translate.rs  tumbler.rs  video.rs  wiki.rs
