[package]
name = "miss-vodka"
version = "0.1.0"
authors = ["mustafa salih <mustafasalih1991@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
pretty_env_logger = "0.4.0"
tokio = { version =  "0.2.11", features = ["rt-threaded", "macros"] }
teloxide = "0.3.4"

# Used to setup a webhook
warp = "0.2.2"
reqwest = "0.10.4"
serde_json = "1.0.50"
